[tool.poetry]
name = "advent2023"
version = "0.1.0"
description = ""
authors = ["Peter (Rocky) Villano <peter.s.villano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
numpy = "^1.26.2"
black = "^23.11.0"
tqdm = "^4.66.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
