[tool.poetry]
name = "advent2023"
version = "0.1.0"
description = ""
authors = ["Peter (Rocky) Villano <peter.s.villano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
numpy = "^2.1.3"
tqdm = "^4.67.1"
trio = "^0.27.0"
trio-parallel = "^1.2.3"
networkx = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
