[tool.poetry]
name = "advent2023"
version = "0.1.0"
description = ""
authors = ["Peter (Rocky) Villano <peter.s.villano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "*"
numpy = "*"
tqdm = "*"
trio = "*"
trio-parallel = "*"
networkx = "*"
z3-solver = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
